--- a/UIKitTutorial/Storyboards/Base.lproj/Main.storyboard
+++ b/UIKitTutorial/Storyboards/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                 <rect key="frame" x="51" y="481.66666666666669" width="300" height="44.000000000000057"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="RTo-SE-SU3"/>
-                                    <constraint firstAttribute="width" constant="300" id="aqt-FQ-yKH"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="aqt-FQ-yKH"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Button"/>
